[UPD] image size and spacing around in the main fixed

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ footer{
 /*LAYOUT CLASS*/
 .container{
     width: 90%;
-    padding-top: 40px;
+    padding-top: 80px;
     margin: 0 auto;
 }
 
@@ -54,7 +54,6 @@ footer{
 .col-14{
     width: calc(100% / 7);
     min-width: 150px;
-    padding: 20px 2.5px 0 2.5px;    
 }
 
 .col-25{
@@ -70,7 +69,7 @@ footer{
 
 .label{
     position: relative;
-    bottom: 25px;
+    bottom: 30px;
     left: 0px; 
     color: #fff;
     font-size: 12.5px;
@@ -78,14 +77,17 @@ footer{
     padding: 5px;
     display: inline-block;
 }
-
-
 .content img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .content{
     aspect-ratio: 16/9;
+    overflow: hidden;
+    padding:0px 2px 0 2px; 
+    margin-top: 17.5px; 
 }
 
 .align-center{
